CC/3th/Sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On WHILE shift to state 1
-- On VAR shift to state 51
-- On SWITCH shift to state 66
-- On PRINT shift to state 75
-- On LEIA shift to state 80
-- On IF shift to state 85
-- On ID shift to state 90
-- On FUNCAO shift to state 91
-- On FOR shift to state 104
-- On variavel shift to state 115
-- On separated_nonempty_list(VIRG,ID) shift to state 119
-- On programa shift to state 159
-- On list(comando) shift to state 160
-- On comando_while shift to state 125
-- On comando_se shift to state 126
-- On comando_saida shift to state 127
-- On comando_funcao shift to state 128
-- On comando_for shift to state 129
-- On comando_entrada shift to state 130
-- On comando_declaracao_funcao shift to state 131
-- On comando_declaracao shift to state 132
-- On comando_case shift to state 133
-- On comando_atribuicao shift to state 134
-- On comando shift to state 135
-- On EOF reduce production list(comando) -> 

State 1:
comando_while -> WHILE . APAR expressao FPAR ACHAVE list(comando) FCHAVE [ WHILE VAR SWITCH PRINT LEIA IF ID FUNCAO FOR FCHAVE EOF BREAK ]
-- On APAR shift to state 2

State 2:
comando_while -> WHILE APAR . expressao FPAR ACHAVE list(comando) FCHAVE [ WHILE VAR SWITCH PRINT LEIA IF ID FUNCAO FOR FCHAVE EOF BREAK ]
-- On LITSTRING shift to state 3
-- On LITREAL shift to state 4
-- On LITINT shift to state 5
-- On ID shift to state 6
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 48
-- On comando_funcao shift to state 23

State 3:
expressao -> LITSTRING . [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITSTRING 
-- On PONTOVIRG reduce production expressao -> LITSTRING 
-- On OU reduce production expressao -> LITSTRING 
-- On MULTIPLICA reduce production expressao -> LITSTRING 
-- On MOD reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On E reduce production expressao -> LITSTRING 
-- On DOISPONTOS reduce production expressao -> LITSTRING 
-- On DIVIDE reduce production expressao -> LITSTRING 
-- On DIFERENTE reduce production expressao -> LITSTRING 

State 4:
expressao -> LITREAL . [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITREAL 
-- On PONTOVIRG reduce production expressao -> LITREAL 
-- On OU reduce production expressao -> LITREAL 
-- On MULTIPLICA reduce production expressao -> LITREAL 
-- On MOD reduce production expressao -> LITREAL 
-- On MENOS reduce production expressao -> LITREAL 
-- On MENORIGUAL reduce production expressao -> LITREAL 
-- On MENOR reduce production expressao -> LITREAL 
-- On MAIS reduce production expressao -> LITREAL 
-- On MAIORIGUAL reduce production expressao -> LITREAL 
-- On MAIOR reduce production expressao -> LITREAL 
-- On IGUAL reduce production expressao -> LITREAL 
-- On FPAR reduce production expressao -> LITREAL 
-- On E reduce production expressao -> LITREAL 
-- On DOISPONTOS reduce production expressao -> LITREAL 
-- On DIVIDE reduce production expressao -> LITREAL 
-- On DIFERENTE reduce production expressao -> LITREAL 

State 5:
expressao -> LITINT . [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On VIRG reduce production expressao -> LITINT 
-- On PONTOVIRG reduce production expressao -> LITINT 
-- On OU reduce production expressao -> LITINT 
-- On MULTIPLICA reduce production expressao -> LITINT 
-- On MOD reduce production expressao -> LITINT 
-- On MENOS reduce production expressao -> LITINT 
-- On MENORIGUAL reduce production expressao -> LITINT 
-- On MENOR reduce production expressao -> LITINT 
-- On MAIS reduce production expressao -> LITINT 
-- On MAIORIGUAL reduce production expressao -> LITINT 
-- On MAIOR reduce production expressao -> LITINT 
-- On IGUAL reduce production expressao -> LITINT 
-- On FPAR reduce production expressao -> LITINT 
-- On E reduce production expressao -> LITINT 
-- On DOISPONTOS reduce production expressao -> LITINT 
-- On DIVIDE reduce production expressao -> LITINT 
-- On DIFERENTE reduce production expressao -> LITINT 

State 6:
comando_funcao -> ID . APAR loption(separated_nonempty_list(VIRG,expressao)) FPAR PONTOVIRG [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
variavel -> ID . [ VIRG PONTOVIRG PONTO OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On APAR shift to state 7
-- On VIRG reduce production variavel -> ID 
-- On PONTOVIRG reduce production variavel -> ID 
-- On PONTO reduce production variavel -> ID 
-- On OU reduce production variavel -> ID 
-- On MULTIPLICA reduce production variavel -> ID 
-- On MOD reduce production variavel -> ID 
-- On MENOS reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIS reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On IGUAL reduce production variavel -> ID 
-- On FPAR reduce production variavel -> ID 
-- On E reduce production variavel -> ID 
-- On DOISPONTOS reduce production variavel -> ID 
-- On DIVIDE reduce production variavel -> ID 
-- On DIFERENTE reduce production variavel -> ID 

State 7:
comando_funcao -> ID APAR . loption(separated_nonempty_list(VIRG,expressao)) FPAR PONTOVIRG [ WHILE VIRG VAR SWITCH PRINT PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LEIA IGUAL IF ID FUNCAO FPAR FOR FCHAVE EOF E DOISPONTOS DIVIDE DIFERENTE BREAK ]
-- On LITSTRING shift to state 3
-- On LITREAL shift to state 4
-- On LITINT shift to state 5
-- On ID shift to state 6
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On separated_nonempty_list(VIRG,expressao) shift to state 41
-- On loption(separated_nonempty_list(VIRG,expressao)) shift to state 42
-- On expressao shift to state 45
-- On comando_funcao shift to state 23
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,expressao)) -> 

State 8:
expressao -> APAR . expressao FPAR [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On LITSTRING shift to state 3
-- On LITREAL shift to state 4
-- On LITINT shift to state 5
-- On ID shift to state 6
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 12
-- On comando_funcao shift to state 23

State 9:
expressao -> variavel . [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
variavel -> variavel . PONTO ID [ VIRG PONTOVIRG PONTO OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On PONTO shift to state 10
-- On VIRG reduce production expressao -> variavel 
-- On PONTOVIRG reduce production expressao -> variavel 
-- On OU reduce production expressao -> variavel 
-- On MULTIPLICA reduce production expressao -> variavel 
-- On MOD reduce production expressao -> variavel 
-- On MENOS reduce production expressao -> variavel 
-- On MENORIGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIS reduce production expressao -> variavel 
-- On MAIORIGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On IGUAL reduce production expressao -> variavel 
-- On FPAR reduce production expressao -> variavel 
-- On E reduce production expressao -> variavel 
-- On DOISPONTOS reduce production expressao -> variavel 
-- On DIVIDE reduce production expressao -> variavel 
-- On DIFERENTE reduce production expressao -> variavel 

State 10:
variavel -> variavel PONTO . ID [ VIRG PONTOVIRG PONTO OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ATRIB ]
-- On ID shift to state 11

State 11:
variavel -> variavel PONTO ID . [ VIRG PONTOVIRG PONTO OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ATRIB ]
-- On VIRG reduce production variavel -> variavel PONTO ID 
-- On PONTOVIRG reduce production variavel -> variavel PONTO ID 
-- On PONTO reduce production variavel -> variavel PONTO ID 
-- On OU reduce production variavel -> variavel PONTO ID 
-- On MULTIPLICA reduce production variavel -> variavel PONTO ID 
-- On MOD reduce production variavel -> variavel PONTO ID 
-- On MENOS reduce production variavel -> variavel PONTO ID 
-- On MENORIGUAL reduce production variavel -> variavel PONTO ID 
-- On MENOR reduce production variavel -> variavel PONTO ID 
-- On MAIS reduce production variavel -> variavel PONTO ID 
-- On MAIORIGUAL reduce production variavel -> variavel PONTO ID 
-- On MAIOR reduce production variavel -> variavel PONTO ID 
-- On IGUAL reduce production variavel -> variavel PONTO ID 
-- On FPAR reduce production variavel -> variavel PONTO ID 
-- On E reduce production variavel -> variavel PONTO ID 
-- On DOISPONTOS reduce production variavel -> variavel PONTO ID 
-- On DIVIDE reduce production variavel -> variavel PONTO ID 
-- On DIFERENTE reduce production variavel -> variavel PONTO ID 
-- On ATRIB reduce production variavel -> variavel PONTO ID 

State 12:
expressao -> expressao . MAIS expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOS expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MULTIPLICA expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIVIDE expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MOD expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENOR expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . IGUAL expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . MAIOR expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . E expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> expressao . OU expressao [ OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DIVIDE DIFERENTE ]
expressao -> APAR expressao . FPAR [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On OU shift to state 13
-- On MULTIPLICA shift to state 15
-- On MOD shift to state 17
-- On MENOS shift to state 19
-- On MENORIGUAL shift to state 24
-- On MENOR shift to state 28
-- On MAIS shift to state 26
-- On MAIORIGUAL shift to state 30
-- On MAIOR shift to state 32
-- On IGUAL shift to state 34
-- On FPAR shift to state 40
-- On E shift to state 36
-- On DIVIDE shift to state 21
-- On DIFERENTE shift to state 38

State 13:
expressao -> expressao OU . expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On LITSTRING shift to state 3
-- On LITREAL shift to state 4
-- On LITINT shift to state 5
-- On ID shift to state 6
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 14
-- On comando_funcao shift to state 23

State 14:
expressao -> expressao . MAIS expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MENOS expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MULTIPLICA expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . DIVIDE expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MOD expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MENOR expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . IGUAL expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MAIOR expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . E expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . OU expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao OU expressao . [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On MULTIPLICA shift to state 15
-- On MOD shift to state 17
-- On MENOS shift to state 19
-- On MENORIGUAL shift to state 24
-- On MENOR shift to state 28
-- On MAIS shift to state 26
-- On MAIORIGUAL shift to state 30
-- On MAIOR shift to state 32
-- On IGUAL shift to state 34
-- On E shift to state 36
-- On DIVIDE shift to state 21
-- On DIFERENTE shift to state 38
-- On VIRG reduce production expressao -> expressao OU expressao 
-- On PONTOVIRG reduce production expressao -> expressao OU expressao 
-- On OU reduce production expressao -> expressao OU expressao 
-- On MOD reduce production expressao -> expressao OU expressao 
-- On FPAR reduce production expressao -> expressao OU expressao 
-- On DOISPONTOS reduce production expressao -> expressao OU expressao 
** Conflict on MOD

State 15:
expressao -> expressao MULTIPLICA . expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On LITSTRING shift to state 3
-- On LITREAL shift to state 4
-- On LITINT shift to state 5
-- On ID shift to state 6
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 16
-- On comando_funcao shift to state 23

State 16:
expressao -> expressao . MAIS expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MENOS expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MULTIPLICA expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao MULTIPLICA expressao . [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . DIVIDE expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MOD expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MENOR expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . IGUAL expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MENORIGUAL expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MAIORIGUAL expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . DIFERENTE expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . MAIOR expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . E expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
expressao -> expressao . OU expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On MOD shift to state 17
-- On VIRG reduce production expressao -> expressao MULTIPLICA expressao 
-- On PONTOVIRG reduce production expressao -> expressao MULTIPLICA expressao 
-- On OU reduce production expressao -> expressao MULTIPLICA expressao 
-- On MULTIPLICA reduce production expressao -> expressao MULTIPLICA expressao 
-- On MOD reduce production expressao -> expressao MULTIPLICA expressao 
-- On MENOS reduce production expressao -> expressao MULTIPLICA expressao 
-- On MENORIGUAL reduce production expressao -> expressao MULTIPLICA expressao 
-- On MENOR reduce production expressao -> expressao MULTIPLICA expressao 
-- On MAIS reduce production expressao -> expressao MULTIPLICA expressao 
-- On MAIORIGUAL reduce production expressao -> expressao MULTIPLICA expressao 
-- On MAIOR reduce production expressao -> expressao MULTIPLICA expressao 
-- On IGUAL reduce production expressao -> expressao MULTIPLICA expressao 
-- On FPAR reduce production expressao -> expressao MULTIPLICA expressao 
-- On E reduce production expressao -> expressao MULTIPLICA expressao 
-- On DOISPONTOS reduce production expressao -> expressao MULTIPLICA expressao 
-- On DIVIDE reduce production expressao -> expressao MULTIPLICA expressao 
-- On DIFERENTE reduce production expressao -> expressao MULTIPLICA expressao 
** Conflict on MOD

State 17:
expressao -> expressao MOD . expressao [ VIRG PONTOVIRG OU MULTIPLICA MOD MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR IGUAL FPAR E DOISPONTOS DIVIDE DIFERENTE ]
-- On LITSTRING shift to state 3
-- On LITREAL shift to state 4
-- On LITINT shift to state 5
-- On ID shift to state 6
-- On APAR shift to state 8
-- On variavel shift to state 9
-- On expressao shift to state 18
-- On comando_funcao shift to state 23
